# zun

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api-ref/source/: capsules.inc  conf.py  containers.inc  hosts.inc  index.rst  parameters.yaml  quota_classes.inc  quotas.inc  services.inc  status.yaml  urls.inc
api-ref/source/samples/: capsule-create-req.json  capsule-create-resp.json  capsule-get-all-resp.json  capsule-show-resp.json  container-action-get-resp.json  container-actions-list-resp.json  container-commit-resp.json  container-create-req.json  container-create-resp.json  container-execute-resize-resp.json  container-execute-resp-2.json  container-execute-resp.json  container-get-all-resp.json  container-logs-req.json  (+19 more)
contrib/legacy-ubuntu-init/: README.rst
contrib/quick-start/: Dockerfile  README.md
contrib/vagrant/: README.md  Vagrantfile  install_devstack.sh  provision.sh
devstack/: README.rst  etcd.conf  gate_hook.sh  local.conf.sample  local.conf.subnode.sample  override-defaults  plugin.sh  settings
devstack/lib/: higgins  nova  zun
doc/: requirements.txt
doc/source/: api_microversion_history.rst  conf.py  index.rst  installation.rst  objects.rst  osprofiler.rst  usage.rst
etc/apache2/: zun.conf  zun.conf.template
etc/higgins/: README-higgins.conf.txt  higgins-config-generator.conf
etc/zun/: api-paste.ini  policy.json  rootwrap.conf  zun-config-generator.conf  zun-policy-generator.conf
higgins/: __init__.py  opts.py  version.py
higgins/api/: app.py  config.py  hooks.py
higgins/cmd/: api.py  compute.py  conductor.py  db_manage.py
higgins/common/: config.py  context.py  exception.py  i18n.py  keystone.py  rpc.py  rpc_service.py  service.py  short_id.py  utils.py
higgins/compute/: api.py  config.py  manager.py
higgins/conductor/: api.py  config.py
higgins/db/: __init__.py  api.py  migration.py
higgins/hacking/: checks.py
higgins/objects/: base.py  higgins_service.py
higgins/service/: periodic.py
higgins/servicegroup/: higgins_service_periodic.py
higgins/tests/: base.py  conf_fixture.py  test_higgins.py
nova/: __init__.py
nova/virt/: hostutils.py
playbooks/fullstack/: post.yaml  run.yaml
playbooks/zun-devstack-base/: run.yaml
playbooks/zun-devstack-base-multinode/: run.yaml
playbooks/zun-tempest-base/: post.yaml
releasenotes/notes/: add-cni-plugin-fd5bf4e9abbe6683.yaml  add-support-for-cri-runtime-2c549a85fe795361.yaml  add-support-for-requested_host-0ea7e317234c3d0c.yaml  add-upgrade-check-framework-4729fcb4ecd31221.yaml  container_driver-e82fe9c64c9b994b.yaml  deprecate-CPU-Ram-Disk-filter-fa8ed0d10b0bd92a.yaml  drop-py-2-7-c475cf37ff3476d8.yaml  introduce-CNI-plugin-for-docker-07d6a78cd281a508.yaml  placement-integration-d701f64c584981d6.yaml  support-entrypoint-option-5127ab5044025380.yaml  zuul-v3-native-gates-a46ef4c168f9362e.yaml
releasenotes/source/: conf.py  index.rst
specs/: cinder-integration.rst  container-SRIOV-networking.rst  container-composition.rst  container-interactive-mode.rst  container-sandbox.rst  container-snapshot.rst  containter-snapshot.rst  cpuset-container.rst  kuryr-integration.rst  local-volume-integration.rst  pci-device-model.rst  zun-api-validation.rst
template/capsule/: capsule-init-containers.yaml  capsule-volume.yaml  capsule.yaml
tools/: README-higgins.conf.txt  README-zun.conf.txt  cover.sh  fast8.sh  flake8wrap.sh  gen-config  gen-criapi  test-setup.sh  zun-config-generator.conf
zun/: __init__.py  opts.py  version.py
zun/api/: app.py  app.wsgi  config.py  hooks.py  http_error.py  rest_api_version_history.rst  servicegroup.py  utils.py  versioned_method.py  wsgi.py
zun/cmd/: api.py  compute.py  conductor.py  db_manage.py  status.py  wsproxy.py
zun/cni/: api.py  utils.py
zun/common/: clients.py  config.py  consts.py  context.py  crypt.py  exception.py  i18n.py  keystone.py  mount.py  name_generator.py  nova.py  paths.py  policy.py  privileged.py  profiler.py  quota.py  rpc.py  rpc_service.py  service.py  short_id.py  singleton.py  utils.py  yamlutils.py
zun/compute/: api.py  claims.py  compute_node_tracker.py  config.py  container_actions.py  manager.py  provider_tree.py  rpcapi.py
zun/conductor/: api.py  config.py
zun/conf/: __init__.py  api.py  availability_zone.py  cinder_client.py  cni_daemon.py  compute.py  container_driver.py  cyborg_client.py  database.py  docker.py  glance_client.py  image_driver.py  k8s.py  keystone.py  netconf.py  network.py  neutron.py  neutron_client.py  nova_client.py  opts.py  path.py  pci.py  placement_client.py  profiler.py  quota.py  scheduler.py  services.py  ssl.py  utils.py  volume.py  websocket_proxy.py  zun_client.py
zun/container/: driver.py  oci.py
zun/criapi/: api_pb2.py  api_pb2_grpc.py  gogo_pb2.py
zun/db/: __init__.py  api.py  migration.py
zun/device/: __init__.py  cyborg.py
zun/hacking/: checks.py
zun/image/: driver.py
zun/network/: cni_network.py  kuryr_network.py  linux_net.py  model.py  network.py  neutron.py  os_vif_util.py
zun/objects/: __init__.py  base.py  capsule.py  compute_node.py  container.py  container_action.py  container_pci_requests.py  exec_instance.py  fields.py  image.py  network.py  numa.py  pci_device.py  pci_device_pool.py  quota.py  quota_class.py  registry.py  request_group.py  resource_class.py  resource_provider.py  vif.py  volume.py  volume_mapping.py  zun_network.py  zun_service.py
zun/pci/: devspec.py  manager.py  request.py  stats.py  utils.py  whitelist.py
zun/scheduler/: base_filters.py  chance_scheduler.py  client.py  driver.py  filter_scheduler.py  host_state.py  loadables.py  request_filter.py  utils.py
zun/service/: periodic.py
zun/servicegroup/: zun_service_periodic.py
zun/tests/: base.py  conf_fixture.py  fake_policy.py  policy_fixture.py
zun/volume/: cinder_api.py  cinder_workflow.py  driver.py
zun/websocket/: websocketclient.py  websocketproxy.py
zun/wsgi/: api.py
(+432 files in other folders)
