[metadata]
name = zun
summary = OpenStack Containers service
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/zun/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
data_files =
    etc/zun =
        etc/zun/api-paste.ini
packages =
    zun

[compile_catalog]
directory = zun/locale
domain = zun

[update_catalog]
domain = zun
output_dir = zun/locale
input_file = zun/locale/zun.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = zun/locale/zun.pot

[entry_points]
console_scripts =
    zun-api = zun.cmd.api:main
    zun-compute = zun.cmd.compute:main
    zun-db-manage = zun.cmd.db_manage:main
    zun-wsproxy = zun.cmd.wsproxy:main
    zun-rootwrap = oslo_rootwrap.cmd:main
    zun-status = zun.cmd.status:main
wsgi_scripts =
    zun-api-wsgi = zun.api.wsgi:init_application

oslo.config.opts =
    zun.conf = zun.conf.opts:list_opts

oslo.config.opts.defaults =
    zun = zun.common.config:set_cors_middleware_defaults

oslo.policy.policies =
    zun = zun.common.policies:list_rules

zun.database.migration_backend =
    sqlalchemy = zun.db.sqlalchemy.migration

zun.scheduler.driver =
    chance_scheduler = zun.scheduler.chance_scheduler:ChanceScheduler
    fake_scheduler = zun.tests.unit.scheduler.fakes:FakeScheduler
    filter_scheduler = zun.scheduler.filter_scheduler:FilterScheduler

zun.image.driver =
    glance = zun.image.glance.driver:GlanceDriver
    docker = zun.image.docker.driver:DockerDriver

zun.network.driver =
    kuryr = zun.network.kuryr_network:KuryrNetwork

zun.volume.driver =
    cinder = zun.volume.driver:Cinder
    local = zun.volume.driver:Local

[extras]
osprofiler =
  osprofiler>=1.4.0 # Apache-2.0
