[metadata]
name = zun
summary = OpenStack Containers service
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/zun/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
data_files =
    etc/zun =
        etc/zun/api-paste.ini
packages =
    zun

[entry_points]
console_scripts =
    zun-api = zun.cmd.api:main
    zun-compute = zun.cmd.compute:main
    zun-db-manage = zun.cmd.db_manage:main
    zun-wsproxy = zun.cmd.wsproxy:main
    zun-rootwrap = oslo_rootwrap.cmd:main
    zun-status = zun.cmd.status:main
    zun-cni = zun.cni.cmd.cni:main
    zun-cni-daemon = zun.cni.cmd.cni_daemon:main
wsgi_scripts =
    zun-api-wsgi = zun.api.wsgi:init_application

oslo.config.opts =
    zun.conf = zun.conf.opts:list_opts

oslo.config.opts.defaults =
    zun = zun.common.config:set_config_defaults

oslo.policy.policies =
    zun = zun.common.policies:list_rules

zun.database.migration_backend =
    sqlalchemy = zun.db.sqlalchemy.migration

zun.scheduler.driver =
    chance_scheduler = zun.scheduler.chance_scheduler:ChanceScheduler
    fake_scheduler = zun.tests.unit.scheduler.fakes:FakeScheduler
    filter_scheduler = zun.scheduler.filter_scheduler:FilterScheduler

zun.container.driver =
    docker = zun.container.docker.driver:DockerDriver
    fake = zun.tests.unit.container.fake_driver:FakeDriver
    k8s = zun.container.k8s.driver:K8sDriver

zun.capsule.driver =
    docker = zun.container.docker.driver:DockerDriver
    cri = zun.container.cri.driver:CriDriver
    fake = zun.tests.unit.container.fake_driver:FakeDriver

zun.image.driver =
    glance = zun.image.glance.driver:GlanceDriver
    docker = zun.image.docker.driver:DockerDriver

zun.network.driver =
    kuryr = zun.network.kuryr_network:KuryrNetwork
    cni = zun.network.cni_network:ZunCNI
    k8s = zun.container.k8s.network:K8sNetwork

zun.volume.driver =
    cinder = zun.volume.driver:Cinder
    local = zun.volume.driver:Local
    k8s.configmap = zun.container.k8s.volume:K8sConfigMap

zun.cni.binding =
    VIFBridge = zun.cni.binding.bridge:BridgeDriver
    VIFOpenVSwitch = zun.cni.binding.bridge:VIFOpenVSwitchDriver

zun.vif_translators =
    ovs = zun.network.os_vif_util:neutron_to_osvif_vif_ovs

[extras]
osprofiler =
  osprofiler>=3.4.0 # Apache-2.0
